--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
   },
   "repository": "https://github.com/BadFrost/CRM.git",
   "dependencies": {
+    "@material-ui/pickers": "^3.2.10",
+    "@react-native-community/datetimepicker": "2.2.2",
     "@react-native-community/masked-view": "0.1.6",
     "@react-native-community/picker": "^1.3.0",
     "@react-navigation/native": "^5.2.4",
     "@react-navigation/stack": "^5.2.19",
     "@use-expo/font": "^2.0.0",
+    "axios": "^0.19.2",
     "expo": "~37.0.3",
     "expo-font": "^8.1.1",
+    "expo-network": "~2.1.0",
     "moment": "^2.25.3",
     "mongodb": "^3.5.7",
     "react": "^16.13.1",
@@ -32,12 +36,16 @@
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-material-dropdown": "^0.11.1",
+    "react-native-network-info": "^5.2.1",
     "react-native-picker-select": "^7.0.0",
+    "react-native-public-ip": "^1.0.2",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "~2.2.0",
     "react-native-slideable-calendar-strip": "^0.4.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
+    "react-native-weekly-calendar": "^0.2.0",
+    "react-time-picker": "^4.0.1",
     "redux-persist-filesystem-storage": "^2.1.0",
     "rn-fetch-blob": "^0.12.0"
   },
